# virus

./: Cargo.toml  LICENSE  README.md
virus/: Cargo.toml
virus-grpc/: Cargo.toml
virus-std/: Cargo.toml  build.rs
virus-std/src/: client.rs  connection.rs  context.rs  error.rs  frame.rs  handler.rs  lib.rs  message.rs  server.rs  service.rs
virus-std/src/codec/: bincode.rs  mod.rs  proto.rs
virus-std/src/protocol/: mod.rs  protocol.proto  protocol.rs
virus/src/: lib.rs
virus/src/codec/: mod.rs
