[package]
name = "virus-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virus = { path = "../virus"}
bytes = "1"
prost = "0.10"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
prost-build = "0.10" 
